# QML-Terminal

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
cmake/: README.md
docs/: README.md
docs/convention/: Coding Practices.md  Coding Style and Formatting.md  README.md  SOLID.md
examples/: CMakeLists.txt  README.md
examples/helloqml/: CMakeLists.txt  main.cpp
examples/helloqml/qml/: Main.qml
include/: CMakeLists.txt  README.md
pocs/: CMakeLists.txt  README.md
scripts/: README.md  deploy_qml_terminal.ps1  install_qt_aqt.ps1
scripts/linux/: clean_build.sh
scripts/win/: clean_build.bat
src/: CMakeLists.txt  README.md  main.cpp  terminal_backend.cpp  terminal_backend.h
src/qml/: Main.qml
tests/: CMakeLists.txt  README.md
